network_policy/create_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: allow-frontend
   namespace: mynamespace
spec:
  podSelector:
      matchLabels:
         role: backend
  policyTypes:
      - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: frontend
      ports:
        - protocol: TCP
          port: 6379
